--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,18 +13,19 @@
 #       Stop all: docker-compose down
 #
 version: '3.7'
-
-x-shared_environment: &shared_environment
-  LOG_LEVEL: ${LOG_LEVEL:-debug}
   
 services:
-  app:
-    image: open-cloud-server:latest
+  ocs2-gateway:
+    image: sineware/ocs2-gateway:latest
+    build:
+      context: ./components/ocs2-gateway
+    ports: 
+      - '8088:8088'
+  
+  ocs2:
+    image: sineware/ocs2:latest
     build:
       context: .
-    environment:
-      <<: *shared_environment
-    ports:
-      - '8080:8080'
-    # user: '0' # uncomment to run as root for testing purposes even though Dockerfile defines 'vapor' user.
+    env_file:
+      - .env
     command: ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "8080"]
