--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,13 +15,22 @@
 version: '3.7'
   
 services:
+  nginx:
+    image: nginx:latest
+    ports:
+      - '80:80'
+    volumes:
+      - ./components/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - ocs2
+      - ocs2-gateway
+
   ocs2-gateway:
     image: sineware/ocs2-gateway:latest
     build:
       context: ./components/ocs2-gateway
-    ports: 
-      - '8088:8088'
-  
+    env_file:
+      - .env  
   ocs2:
     image: sineware/ocs2:latest
     build:
